Revise copy and project descriptions. Update skill section.

--- a/index.html
+++ b/index.html
@@ -63,14 +63,11 @@
       </div>
       <div class="mt-8">
         <p class="text-sm text-gray-600 dark:text-neutral-400">
-          I'm a recent graduate from Santa Clara University. I studied Electrical and Computer Engineering. For two years I was a research assistant in the Human Interaction and Innovation Robotics Lab at SCU.
+          I recently graduated from Santa Clara University with a degree in Electrical and Computer Engineering. For two years, I contributed to the Human-Machine Interaction & Innovation Robotics Lab at SCU as a software engineer and research assistant.
         </p>
-
         <p class="mt-3 text-sm text-gray-600 dark:text-neutral-400">
-          We developed a mobile manipulator interfaced through speech; check out videos of the robot in action <a class="text-[13px] text-gray-500 underline hover:text-gray-800 hover:decoration-2 focus:outline-none focus:decoration-2 dark:text-neutral-500 dark:hover:text-neutral-400" href="#videos">below</a>
-          and our publications <a class="text-[13px] text-gray-500 underline hover:text-gray-800 hover:decoration-2 focus:outline-none focus:decoration-2 dark:text-neutral-500 dark:hover:text-neutral-400" href="#publications">here</a>
+          During my time there, I focused on developing a speech-interfaced mobile manipulator. You can see the robot in action in the videos <a class="text-[13px] text-gray-500 underline hover:text-gray-800 hover:decoration-2 focus:outline-none focus:decoration-2 dark:text-neutral-500 dark:hover:text-neutral-400" href="#videos">below</a> and find our publications <a class="text-[13px] text-gray-500 underline hover:text-gray-800 hover:decoration-2 focus:outline-none focus:decoration-2 dark:text-neutral-500 dark:hover:text-neutral-400" href="#publications">here</a>. 
         </p>
-
         <ul class="mt-5 flex flex-col gap-y-3">
           <li class="flex items-center gap-x-2.5">
             <svg class="dark:fill-white shrink-0 size-3.5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -108,7 +105,7 @@
               Work Experience
             </h2>
             <p class="mb-5 text-sm text-gray-600 dark:text-neutral-400">
-              Human Machine Interaction and Innovation Laboratory
+              Human-Machine Interaction and Innovation Robotics Lab
             </p>
           </div>
 
@@ -134,13 +131,13 @@
 
                 <ul class="list-disc ms-6 mt-3 space-y-1.5">
                   <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
-                    Enhanced robot delivery task efficiency by 67% through code optimization in Python.
+                    Improved mobile manipulator performance by 67% through Python code optimization and test-driven development, increasing task reliability in simulated and real environments.
                   </li>
                   <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
                     Authored and presented a conference publication at IEEE RO-MAN, cited in [1].
                   </li>
                   <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
-                    Videos of the robot and the learning system are <a class="text-sm text-gray-500 underline hover:text-gray-800 hover:decoration-2 focus:outline-none focus:decoration-2 dark:text-neutral-500 dark:hover:text-neutral-400" href="#videos">here</a>
+                    Videos of the robot and the learning system are available <a class="text-sm text-gray-500 underline hover:text-gray-800 hover:decoration-2 focus:outline-none focus:decoration-2 dark:text-neutral-500 dark:hover:text-neutral-400" href="#videos">here</a>
                   </li>
                 </ul>
               </div>
@@ -157,19 +154,19 @@
                 </h3>
 
                 <p class="font-semibold text-sm text-gray-800 dark:text-neutral-200">
-                  Kuehler Researcher
+                  Kuehler Award Researcher
                 </p>
 
                 <p class="mt-1 text-sm text-gray-600 dark:text-neutral-400">
-                  Collaborated with PhD students to develop a speech-to-action robotic system, enabling a mobile manipulator to identify, pick, and place household items based on speech commands using Robot Operating System (ROS), Google Speech-to-Text, GPT-Neo, and Intel RealSense RGBD Cameras.
+                  Collaborated with PhD students to develop a speech-to-action robotic system, enabling a mobile manipulator to identify, pick, and place items based on speech commands using Robot Operating System (ROS), Google Speech-to-Text, GPT-Neo, and Intel RealSense RGBD Cameras.
                 </p>
 
                 <ul class="list-disc ms-6 mt-3 space-y-1.5">
                   <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
-                    Recipient of the Kuehler Research Award at Santa Clara University for contributions to the HMI<sup>2</sup> Lab
+                    Earned the Kuehler Research Award for novel contributions to robotic human interaction and co-authored three peer-reviewed publications listed below.
                   </li>
                   <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
-                    Designed user studies and co-authored the publications cited in [2] and [3].
+                    Designed and conducted user studies to evaluate system effectiveness and usability.
                   </li>
                 </ul>
               </div>
@@ -191,10 +188,13 @@
 
                 <ul class="list-disc ms-6 mt-3 space-y-1.5">
                   <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
-                    Designed an API to control a manipulator and mobile base using Python and Robot Operating System (ROS).
+                    Developed an API in Python and ROS to control a manipulator and mobile base.
                   </li>
                   <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
-                    Created software to teleoperate a manipulator for kinesthetic teaching using the MoveIt Motion-Planning Framework. Developed software and 3D meshes to simulate a lab environment in RViz for obstacle avoidance.
+                    Created kinesthetic teaching capabilities using MoveIt and teleoperation for a manipulator.
+                  </li>
+                  <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
+                    Built a virtual lab in RViz with simulated obstacles and 3D meshes to test autonomous path planning.
                   </li>
                 </ul>
               </div>
@@ -293,7 +293,7 @@
                 <ul class="flex flex-wrap">
                   <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
                     <img class="shrink-0 size-4 me-1" src="images/award.svg" alt="Award icon">
-                    Kuehler Research Award for Robotics (2024)
+                    Robotics Kuehler Research Award (2024)
                   </li>
                   <li class="me-1 last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
                     <img class="shrink-0 size-4 me-1" src="images/first.svg" alt="First place icon">
@@ -308,38 +308,53 @@
                 <span class="block text-sm text-gray-500 dark:text-neutral-500">Skills:</span>
               </dt>
               <dd>
+                <!-- Real-time Systems, 
+                 Simulation, Automated Testing, Shell Scripting, MoveIt, RViz -->
                 <ul class="flex flex-wrap">
                   <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
-                    <img class="shrink-0 size-4 me-1" src="images/c.svg" alt="C/C++ icon">
-                    C/C++
+                    C++
                   </li>
                   <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
-                    <img class="shrink-0 size-4 me-1" src="images/python.svg" alt="Python icon">
                     Python
                   </li>
                   <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
-                    <img class="shrink-0 size-4 me-1" src="images/linux.svg" alt="Linux icon">
                     Linux
                   </li>
                   <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
-                    <img class="shrink-0 size-4 me-1" src="images/git.svg" alt="Git icon">
                     Git
                   </li>
                   <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
-                    <img class="shrink-0 size-4 me-1" src="images/software-development.svg" alt="Robot Operating System icon">
-                    Robot Operating System
+                    ROS
                   </li>
                   <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
-                    <img class="shrink-0 size-4 me-1" src="images/robot-arm.svg" alt="Robotic Manipulation icon">
-                    Robotic Manipulation
+                    Manipulation
                   </li>
                   <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
-                    <img class="shrink-0 size-4 me-1" src="images/rotations.svg" alt="Kinematics icon">
+                    MoveIt
+                  </li>
+                  <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
                     Kinematics
                   </li>
                   <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
-                    <img class="shrink-0 size-4 me-1" src="images/transform.svg" alt="Motion Planning icon">
-                    Motion Planning
+                    Real-Time Systems
+                  </li>
+                  <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
+                    Simulation
+                  </li>
+                  <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
+                    Automated Testing (Selenium)
+                  </li>
+                  <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
+                    Shell Scripting
+                  </li>
+                  <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
+                    HTML
+                  </li>
+                  <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
+                    JS
+                  </li>
+                  <li class="me-1 last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
+                    Tailwind
                   </li>
                 </ul>
               </dd>
