Add project section

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <a class="nav-link py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-gray-800 font-medium text-gray-800 focus:outline-none dark:border-neutral-200 dark:text-neutral-200" href="#start" aria-current="page">Home</a>
           <a class="nav-link py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-gray-500 hover:text-gray-800 focus:outline-none dark:text-neutral-400 dark:hover:text-neutral-200" href="#experience">Experience</a>
           <a class="nav-link py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-gray-500 hover:text-gray-800 focus:outline-none dark:text-neutral-400 dark:hover:text-neutral-200" href="#publications">Publications</a>
+          <a class="nav-link py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-gray-500 hover:text-gray-800 focus:outline-none dark:text-neutral-400 dark:hover:text-neutral-200" href="#projects">Projects</a>
           <a class="nav-link py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-gray-500 hover:text-gray-800 focus:outline-none dark:text-neutral-400 dark:hover:text-neutral-200" href="#awards">Awards</a>
           <a class="nav-link py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-gray-500 hover:text-gray-800 focus:outline-none dark:text-neutral-400 dark:hover:text-neutral-200" href="#videos">Robot Videos</a>
         </div>
@@ -278,6 +279,72 @@
           </ul>
           </div>
       </section>
+      
+      <section id="projects" class="scroll-mt-20 mt-10 sm:mt-14">
+        <h2 class="mb-5 text-lg font-medium text-gray-800 dark:text-neutral-200">
+          Software Projects & Entrepreneurship
+        </h2>
+        <div class="group relative flex gap-x-5">
+          <div class="grow pb-8 group-last:pb-0">
+            <p class="font-semibold text-md text-gray-800 dark:text-neutral-200">
+              Matt's Matcha - E-commerce and Retail Brand
+            </p>
+            <p class="font-bold italic mt-1 text-sm text-gray-600 dark:text-neutral-400">
+              Co-founder/Generalist
+            </p> 
+            <p class="mt-1 text-sm text-gray-600 dark:text-neutral-400">
+              Launched a direct-to-consumer brand from scratch, handling everything from legal setup and supply chain management to branding, packaging, customer engagement, and retail operations.
+            </p>
+            <ul class="list-disc ms-6 mt-3 space-y-1.5">
+              <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
+                Designed and customized a Shopify storefront, led marketing efforts (SEO, outreach, social media), and created all product visuals and content. 
+              </li>
+              <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
+                Operated with startup-level speed and adaptability – self-taught across functions, iterated quickly, and executed end-to-end with limited resources.
+              </li>
+              <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
+                <a class="text-sm text-gray-500 underline hover:text-gray-800 hover:decoration-2 focus:outline-none focus:decoration-2 dark:text-neutral-500 dark:hover:text-neutral-400" href="https://mattsmatcha.com/" target="_blank" rel="noopener noreferrer">View our site here</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="group relative flex gap-x-5">
+          <div class="grow pb-8 group-last:pb-0">
+            <p class="font-semibold text-md text-gray-800 dark:text-neutral-200">
+              Automated Stock Checker Bot Deployed to AWS
+            </p>
+            <ul class="list-disc ms-6 mt-3 space-y-1.5">
+              <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
+                Built a Python-based bot using Selenium that automates login flows, bypasses reCAPTCHA, and continuously monitors product stock – sending real-time Telegram alerts with product details (price, size, link).
+              </li>
+              <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
+                Designed with clean OOP architecture (e.g., StockChecker , TelegramBot classes) for modularity and extensibility; currently deploying to AWS (EC2 + CloudWatch) for 24/7 uptime and production monitoring.
+              </li>
+              <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
+                <a class="text-sm text-gray-500 underline hover:text-gray-800 hover:decoration-2 focus:outline-none focus:decoration-2 dark:text-neutral-500 dark:hover:text-neutral-400" href="https://github.com/matthewtognotti/stock-checker-bot" target="_blank" rel="noopener noreferrer">View on GitHub</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="group relative flex gap-x-5">
+          <div class="grow pb-8 group-last:pb-0">
+            <p class="font-semibold text-md text-gray-800 dark:text-neutral-200">
+              LLM Tool-Calling Agent with Retrieval-Augmented Generation
+            </p>
+            <ul class="list-disc ms-6 mt-3 space-y-1.5">
+              <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
+              Built a GPT-4-powered agent leveraging OpenAI function calling to execute real-world tasks (e.g., sending emails), designed as a foundation for multi-tool LLM systems.
+              </li>
+              <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
+              Currently extending to support Retrieval-Augmented Generation (RAG) and model context protocol (MCP), enabling complex task delegation and context-aware reasoning.
+              </li>
+
+            </ul>
+          </div>
+        </div>
+    </section>
       <section id="awards" class="scroll-mt-20 mt-10 sm:mt-14">
         <div>
           <h2 class="mb-5 text-lg font-medium text-gray-800 dark:text-neutral-200">
@@ -302,7 +369,6 @@
                 </ul>
               </dd>
             </dl>
-
             <dl class="flex flex-col sm:flex-row gap-1">
               <dt class="min-w-40">
                 <span class="block text-sm text-gray-500 dark:text-neutral-500">Skills:</span>
@@ -397,22 +463,21 @@
           <h2 class="mb-5 mt-5 text-lg font-medium text-gray-800 dark:text-neutral-200">
             Robot Videos
           </h2>
-
-          <p class="text-sm text-black-600 dark:text-neutral-400 mb-5">
+          <p class="text-sm text-gray-600 dark:text-neutral-400 mb-5">
             This first video shows the robot executing a task that it was previously taught.
           </p>
           <div class="mb-5 relative" style="padding-top: 56.25%">
             <iframe class="rounded-lg absolute inset-0 w-full h-full" src="https://www.youtube.com/embed/I1os_-2GVwU?si=Zo00qkrbNGP4eeaP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </div>
 
-          <p class="text-sm text-black-600 dark:text-neutral-400 mb-5 mt-10">
+          <p class="text-sm text-gray-600 dark:text-neutral-400 mb-5 mt-10">
             This video shows the robot retrieving a single object for the user.
           </p>
           <div class="mb-5 relative" style="padding-top: 56.25%">
             <iframe class="rounded-lg absolute inset-0 w-full h-full" src="https://www.youtube.com/embed/7ieUHwGYHr8?si=--A5Z7j5n1CioorE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </div>
 
-          <p class="text-sm text-black-600 dark:text-neutral-400 mb-5 mt-10">
+          <p class="text-sm text-gray-600 dark:text-neutral-400 mb-5 mt-10">
             The final video demonstrates how a user can teach the robot a task.
           </p>
           <div class="mb-5 relative" style="padding-top: 56.25%">
