Update Skill Section

--- a/index.html
+++ b/index.html
@@ -374,14 +374,12 @@
                 <span class="block text-sm text-gray-500 dark:text-neutral-500">Skills:</span>
               </dt>
               <dd>
-                <!-- Real-time Systems, 
-                 Simulation, Automated Testing, Shell Scripting, MoveIt, RViz -->
                 <ul class="flex flex-wrap">
                   <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
-                    C++
+                    Python
                   </li>
                   <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
-                    Python
+                    C++
                   </li>
                   <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
                     Linux
@@ -402,13 +400,13 @@
                     Kinematics
                   </li>
                   <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
-                    Real-Time Systems
+                    Embedded Systems
                   </li>
                   <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
                     Simulation
                   </li>
                   <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
-                    Automated Testing (Selenium)
+                    Automated Testing
                   </li>
                   <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
                     Shell Scripting
@@ -417,10 +415,10 @@
                     HTML
                   </li>
                   <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
-                    JS
+                    Tailwind
                   </li>
                   <li class="me-1 last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
-                    Tailwind
+                    Selenium
                   </li>
                 </ul>
               </dd>
