--- a/index.html
+++ b/index.html
@@ -403,6 +403,12 @@
                     Embedded Systems
                   </li>
                   <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
+                     STM32
+                  </li>
+                  <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
+                    ARM Assembly
+                  </li>
+                  <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
                     Simulation
                   </li>
                   <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
@@ -417,8 +423,11 @@
                   <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
                     Tailwind
                   </li>
-                  <li class="me-1 last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
+                  <li class="me-1 last:after:content-none after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
                     Selenium
+                  </li>
+                  <li class="me-1 last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
+                    React
                   </li>
                 </ul>
               </dd>
