update bullet points

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
                 <ul class="list-disc ms-6 mt-3 space-y-1.5">
                   <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
-                    Improved mobile manipulator performance by 67% through Python code optimization and test-driven development, increasing task reliability in simulated and real environments.
+                    Improved system performance by 67% through iterative design optimization and user feedback integration, delivering reliable automation that met real-world operational needs.
                   </li>
                   <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
                     Authored and presented a conference publication at IEEE RO-MAN, cited in [1].
@@ -167,7 +167,7 @@
                     Earned the Kuehler Research Award for novel contributions to robotic human interaction and co-authored three peer-reviewed publications listed below.
                   </li>
                   <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
-                    Designed and conducted user studies to evaluate system effectiveness and usability.
+                    Designed and conducted user studies to evaluate system effectiveness and usability, incorporating stakeholder feedback to optimize solution performance.
                   </li>
                 </ul>
               </div>
@@ -189,7 +189,7 @@
 
                 <ul class="list-disc ms-6 mt-3 space-y-1.5">
                   <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
-                    Developed an API in Python and ROS to control a manipulator and mobile base.
+                    Developed an API in Python and ROS to create seamless integrations between hardware and software systems.
                   </li>
                   <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
                     Created kinesthetic teaching capabilities using MoveIt and teleoperation for a manipulator.
@@ -382,16 +382,34 @@
                     C++
                   </li>
                   <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
+                    Docker
+                  </li>
+                  <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
                     Linux
                   </li>
                   <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
-                    Git
+                    Context Engineering
+                  </li>
+                  <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
+                    RAG Pipelines
+                  </li>
+                  <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
+                    Agent Tooling
+                  </li>
+                  <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
+                    React
+                  </li>
+                  <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
+                    Selenium
+                  </li>
+                  <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
+                    Automated Testing
+                  </li>
+                  <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
+                    Shell Scripting
                   </li>
                   <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
                     ROS
-                  </li>
-                  <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
-                    Manipulation
                   </li>
                   <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
                     MoveIt
@@ -408,26 +426,8 @@
                   <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
                     ARM Assembly
                   </li>
-                  <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
-                    Simulation
-                  </li>
-                  <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
-                    Automated Testing
-                  </li>
-                  <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
-                    Shell Scripting
-                  </li>
-                  <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
-                    HTML
-                  </li>
-                  <li class="me-1 after:content-[','] last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
-                    Tailwind
-                  </li>
-                  <li class="me-1 last:after:content-none after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
-                    Selenium
-                  </li>
                   <li class="me-1 last:after:content-none inline-flex items-center text-sm text-gray-800 dark:text-neutral-200 pr-2">
-                    React
+                    Simulation
                   </li>
                 </ul>
               </dd>
